k8s/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
    # 🔥 관리자 PC(192.168.10.10)만 접속 허용
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.10.10/32,192.168.30.10/32"

spec:
  ingressClassName: nginx
  rules:
  - host: grafana.4jo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-grafana
            port:
              number: 80
